# Minimizer

./: README.md  pyproject.toml
minimizer/: gradient_descent.py  min.py  parser.py  simplex.py  test_functions.py  visualize.py
